--- a/P.I/style.css
+++ b/P.I/style.css
@@ -1,159 +1,157 @@
-*{
-    box-sizing: border-box;
-    margin-left: 10px ;
-    margin-right: 10px;
-    padding: 0;
-
+* {
+  box-sizing: border-box;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 0;
 }
-body{
-    background-color: #F5D6CC;
-    margin: 20px 20px 20px 20px;
-
-    
+body {
+  background-color: #f5d6cc;
+  margin: 20px 20px 20px 20px;
 }
-.cabecalho{
-    padding-top:20px;
-    padding-bottom: 30px;
-
+.cabecalho {
+  padding-top: 20px;
+  padding-bottom: 30px;
 }
-.container{
-    display: flex;
-    justify-content: right;
+.container {
+  display: flex;
+  justify-content: right;
 }
-.navbar-brand-img{
-    width: 150px;
-    justify-content: left;
+.navbar-brand-img {
+  width: 150px;
+  justify-content: left;
 }
-.nav-item{
-    display: inline;
-    padding-inline: 30px;
+.nav-item {
+  display: inline;
+  padding-inline: 30px;
 
-    list-style: none;
-
+  list-style: none;
 }
 
-h1{
-    font-size: 50px;
-    padding-top: 20px;
-    padding-bottom: 30px;
+h1 {
+  font-size: 50px;
+  padding-top: 20px;
+  padding-bottom: 30px;
 }
-h1, h2{
-    color:#774433;
-    text-align: center;
+h1,
+h2 {
+  color: #774433;
+  text-align: center;
 }
-.titulo{
-    font-size: 50px;
+.titulo {
+  font-size: 50px;
 }
-img{
-    width: 500px;
-    border-radius: 350.63px
+img {
+  width: 500px;
+  border-radius: 350.63px;
 }
-.inicio{
-    display: flex;
-    font-size: 18px;
-    padding-bottom: 50px;
-    gap: 150px;
-    margin-right:30px ;
-    margin-left: 30px;
-    font-size: 24px;
+.inicio {
+  display: flex;
+  font-size: 18px;
+  padding-bottom: 50px;
+  gap: 150px;
+  margin-right: 30px;
+  margin-left: 30px;
+  font-size: 24px;
 }
-.inicio p{
-    text-align: justify;
+.inicio p {
+  text-align: justify;
+}
+.sabores h3 {
+  color: rgba(244, 127, 112, 1);
+  font-size: 28px;
+}
+.bolos {
+  display: flex;
+  justify-content: space-around;
+  gap: 50px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
 
+.cupcake {
+  display: flex;
+  justify-content: space-around;
+  gap: 50px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
-.sabores h3{
-    color: rgba(244, 127, 112, 1);
-    font-size: 28px;
-
+.trufas {
+  display: flex;
+  justify-content: space-around;
+  gap: 50px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
-.bolos{
-    display: flex;
-    justify-content: space-around;
-    gap: 50px;
-    padding-top: 30px;
-    padding-bottom: 30px ;
+.rodapé h2 {
+  padding-top: 8px;
+  text-align: center;
+  width: 100%;
+  height: 70px;
+  background: #f47f70;
 }
-
-.cupcake{
-    display: flex;
-    justify-content: space-around;
-    gap: 50px;
-    padding-top: 30px;
-    padding-bottom: 30px ;
+.rodapé p {
+  color: rgba(244, 127, 112, 1);
+  font-size: 25px;
 }
-.trufas{
-    display: flex;
-    justify-content: space-around;
-    gap: 50px;
-    padding-top: 30px;
-    padding-bottom: 30px ;
+.sabor-bolo {
+  list-style: none;
+  color: #774433;
+  font-size: 20px;
 }
-.rodapé h2{
-    padding-top: 8px;
-    text-align: center;
-    width: 100%;
-    height: 70px;
-    background:#F47F70 ;
+.sabor-cupcake {
+  list-style: none;
+  color: #774433;
+  font-size: 20px;
 }
-.rodapé p{
-    color: rgba(244, 127, 112, 1);
-    font-size: 25px;
+.sabor-trufas {
+  list-style: none;
+  color: #774433;
+  font-size: 20px;
 }
-.sabor-bolo{
-    list-style: none;
-    color: #774433;
-    font-size: 20px;
+.sabor-trufas h4 {
+  color: #f47f70;
 }
-.sabor-cupcake{
-    list-style: none;
-    color: #774433;
-    font-size: 20px;
+.sabor-paodemel {
+  list-style: none;
+  color: #774433;
+  font-size: 20px;
 }
-.sabor-trufas{
-    list-style: none;
-    color: #774433;
-    font-size: 20px;
-}
-.sabor-trufas h4{
-    color: #F47F70;
-}
-.sabor-paodemel{
-    list-style: none;
-    color: #774433;
-    font-size: 20px;
-}
-.sabor-paodemel h4{
-    color: #F47F70;
+.sabor-paodemel h4 {
+  color: #f47f70;
 }
 .wpp img {
-    width: 50px;
-    border-radius: 0;
+  width: 50px;
+  border-radius: 0;
 }
-.wpp{
-    display: flex;
-    padding: 20px;
-    color: #774433;
+.wpp {
+  display: flex;
+  padding: 20px;
+  color: #774433;
 }
-.wpp a:hover, a:link, a:visited {
-    color: #774433;
+.wpp a:hover,
+a:link,
+a:visited {
+  color: #774433;
 }
 .insta img {
-    width: 50px;
-    border-radius: 0;   
+  width: 50px;
+  border-radius: 0;
 }
-.insta{
-    display: flex;
-    padding: 20px;
-    color: #774433;
+.insta {
+  display: flex;
+  padding: 20px;
+  color: #774433;
 }
-.insta a:hover, a:link, a:visited{
-    color: #774433;
-    text-decoration: none;
+.insta a:hover,
+a:link,
+a:visited {
+  color: #774433;
+  text-decoration: none;
 }
-button{
-    background-color: #774433;
-    color: #F47F70;
-    border-radius: 30px;
-    width: 200px;
-    float: right;
+button {
+  background-color: #774433;
+  color: #f47f70;
+  border-radius: 30px;
+  width: 200px;
+  float: right;
 }
